edit scrapper file

--- a/images/scrapper.ipynb
+++ b/images/scrapper.ipynb
@@ -109,45 +109,34 @@
     "        for chunk in response.iter_content(chunk_size=8192):\n",
     "            file.write(chunk)\n",
     "\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
-    "with open('html_files/hot_coffees.txt') as f:\n",
-    "    html = f.read()\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "image_links = []\n",
-    "alt_texts = []\n",
+    "def scrapAndDownload(file_name, folder_name):\n",
     "\n",
-    "div_tags = soup.find_all('div', class_='gridItem text-center')\n",
-    "for div_tag in div_tags:\n",
-    "    img_tag = div_tag.find('img', class_='sb-imageFade__imagePositioning sb-imageFade__show')\n",
-    "    image_link = img_tag['src']\n",
-    "    alt_text = img_tag['alt']\n",
-    "    image_links.append(image_link)\n",
-    "    alt_texts.append(alt_text)\n",
+    "    with open(file_name) as f:\n",
+    "        html = f.read()\n",
     "\n",
-    "for link, alt_text in zip(image_links, alt_texts): \n",
-    "    image_url = link\n",
-    "    file_path = 'file_name' + '/' + alt_text + '.jpg'\n",
-    "    download_image(image_url, file_path)"
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "    image_links = []\n",
+    "    alt_texts = []\n",
+    "\n",
+    "    image_elements = soup.find_all('img', class_='sb-imageFade__imagePositioning sb-imageFade__show')\n",
+    "\n",
+    "    for img in image_elements:\n",
+    "        src = img.get('src')\n",
+    "        alt = img.get('alt')\n",
+    "        if src:\n",
+    "            image_links.append(src)\n",
+    "            alt_texts.append(alt)\n",
+    "\n",
+    "\n",
+    "    for link, alt_text in zip(image_links, alt_texts): \n",
+    "        image_url = link\n",
+    "        file_path = folder_name + '/' + alt_text + '.jpg'\n",
+    "        download_image(image_url, file_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'scrapAndDownload' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m scrapAndDownload(\u001b[39m'\u001b[39m\u001b[39mhtml_files/hot_coffees.txt\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'scrapAndDownload' is not defined"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
