edit scrapper files

--- a/images/scrapper.ipynb
+++ b/images/scrapper.ipynb
@@ -143,7 +143,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scrapAndDownload ('./html_files/hot_teas.txt', 'hot_teas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/hot_coffees.txt', 'hot_coffees')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/hot_drinks.txt', './hot_drinks/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/frappuccino.txt', './frappucino/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/cold_coffees.txt', './cold_coffees/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/iced_tea.txt', 'iced_teas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/cold_drinks.txt', 'cold_drinks')"
+   ]
   }
  ],
  "metadata": {
