--- a/images/scrapper.ipynb
+++ b/images/scrapper.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,22 +132,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'scrapAndDownload' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m scrapAndDownload(\u001b[39m'\u001b[39m\u001b[39mhtml_files/hot_coffees.txt\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'scrapAndDownload' is not defined"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "def download_image(url, file_path):\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    response.raise_for_status()\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        for chunk in response.iter_content(chunk_size=8192):\n",
+    "            file.write(chunk)\n",
+    "\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def scrapAndDownload(file_name, folder_name):\n",
+    "\n",
+    "    with open(file_name) as f:\n",
+    "        html = f.read()\n",
+    "\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "    image_links = []\n",
+    "    alt_texts = []\n",
+    "\n",
+    "    image_elements = soup.find_all('img', class_='sb-imageFade__imagePositioning sb-imageFade__show')\n",
+    "\n",
+    "    for img in image_elements:\n",
+    "        src = img.get('src')\n",
+    "        alt = img.get('alt')\n",
+    "        if src:\n",
+    "            image_links.append(src)\n",
+    "            alt_texts.append(alt)\n",
+    "\n",
+    "\n",
+    "    for link, alt_text in zip(image_links, alt_texts): \n",
+    "        image_url = link\n",
+    "        file_path = folder_name + '/' + alt_text + '.jpg'\n",
+    "        download_image(image_url, file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/via_instant.txt', './at_home_coffee/via_instant')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapAndDownload('./html_files/other.txt', './merchandise/other')"
+   ]
   },
   {
    "cell_type": "code",
