--- a/images/convertToJSArray.ipynb
+++ b/images/convertToJSArray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "output_file = \"./image_arrays.js\"  # Path to the output JavaScript file\n",
     "\n",
     "\n",
-    "def convertToArrayObjects (category, folder_path):\n",
+    "def menuData (category, folder_path):\n",
     "    image_objects = []\n",
     "\n",
     "    # Iterate over each file in the folder\n",
@@ -22,72 +22,339 @@
     "            item_path = os.path.join(folder_path, filename)  # Get the full path to the image\n",
     "            \n",
     "            # Create the object and append it to the list\n",
-    "            image_objects.append({\"item_name\": item_name, \"item_path\": item_path})\n",
+    "            image_objects.append({\"cat_name\": item_name, \"cat_img_path\": item_path})\n",
     "\n",
     "    return image_objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'item_name': 'Whole Bean', 'item_path': './menu/Whole Bean.jpg'},\n",
-       " {'item_name': 'Iced Teas', 'item_path': './menu/Iced Teas.jpg'},\n",
-       " {'item_name': 'Snacks & Sweets', 'item_path': './menu/Snacks & Sweets.jpg'},\n",
-       " {'item_name': 'Bakery', 'item_path': './menu/Bakery.jpg'},\n",
-       " {'item_name': 'Oatmeal & Yogurt', 'item_path': './menu/Oatmeal & Yogurt.jpg'},\n",
-       " {'item_name': 'Cold Coffees', 'item_path': './menu/Cold Coffees.jpg'},\n",
-       " {'item_name': 'Hot Breakfast', 'item_path': './menu/Hot Breakfast.jpg'},\n",
-       " {'item_name': 'Hot Teas', 'item_path': './menu/Hot Teas.jpg'},\n",
-       " {'item_name': 'Mugs', 'item_path': './menu/Mugs.jpg'},\n",
-       " {'item_name': 'Other', 'item_path': './menu/Other.jpg'},\n",
-       " {'item_name': 'VIA® Instant', 'item_path': './menu/VIA® Instant.jpg'},\n",
-       " {'item_name': 'Cold Drinks', 'item_path': './menu/Cold Drinks.jpg'},\n",
-       " {'item_name': 'Hot Drinks', 'item_path': './menu/Hot Drinks.jpg'},\n",
-       " {'item_name': 'Tumblers', 'item_path': './menu/Tumblers.jpg'},\n",
-       " {'item_name': 'Oleato™', 'item_path': './menu/Oleato™.jpg'},\n",
-       " {'item_name': 'Hot Coffees', 'item_path': './menu/Hot Coffees.jpg'},\n",
-       " {'item_name': 'Frappuccino® Blended Beverages',\n",
-       "  'item_path': './menu/Frappuccino® Blended Beverages.jpg'},\n",
-       " {'item_name': 'Lunch', 'item_path': './menu/Lunch.jpg'},\n",
-       " {'item_name': 'Cold Cups', 'item_path': './menu/Cold Cups.jpg'}]"
+       "[{'cat_name': 'Whole Bean', 'cat_img_path': './menu/Whole Bean.jpg'},\n",
+       " {'cat_name': 'Iced Teas', 'cat_img_path': './menu/Iced Teas.jpg'},\n",
+       " {'cat_name': 'Snacks & Sweets', 'cat_img_path': './menu/Snacks & Sweets.jpg'},\n",
+       " {'cat_name': 'Bakery', 'cat_img_path': './menu/Bakery.jpg'},\n",
+       " {'cat_name': 'Oatmeal & Yogurt',\n",
+       "  'cat_img_path': './menu/Oatmeal & Yogurt.jpg'},\n",
+       " {'cat_name': 'Cold Coffees', 'cat_img_path': './menu/Cold Coffees.jpg'},\n",
+       " {'cat_name': 'Hot Breakfast', 'cat_img_path': './menu/Hot Breakfast.jpg'},\n",
+       " {'cat_name': 'Hot Teas', 'cat_img_path': './menu/Hot Teas.jpg'},\n",
+       " {'cat_name': 'Mugs', 'cat_img_path': './menu/Mugs.jpg'},\n",
+       " {'cat_name': 'Other', 'cat_img_path': './menu/Other.jpg'},\n",
+       " {'cat_name': 'VIA® Instant', 'cat_img_path': './menu/VIA® Instant.jpg'},\n",
+       " {'cat_name': 'Cold Drinks', 'cat_img_path': './menu/Cold Drinks.jpg'},\n",
+       " {'cat_name': 'Hot Drinks', 'cat_img_path': './menu/Hot Drinks.jpg'},\n",
+       " {'cat_name': 'Tumblers', 'cat_img_path': './menu/Tumblers.jpg'},\n",
+       " {'cat_name': 'Oleato™', 'cat_img_path': './menu/Oleato™.jpg'},\n",
+       " {'cat_name': 'Hot Coffees', 'cat_img_path': './menu/Hot Coffees.jpg'},\n",
+       " {'cat_name': 'Frappuccino® Blended Beverages',\n",
+       "  'cat_img_path': './menu/Frappuccino® Blended Beverages.jpg'},\n",
+       " {'cat_name': 'Lunch', 'cat_img_path': './menu/Lunch.jpg'},\n",
+       " {'cat_name': 'Cold Cups', 'cat_img_path': './menu/Cold Cups.jpg'}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "menu = convertToArrayObjects('menu', './menu/')\n",
+    "menu = menuData('menu', './menu/')\n",
     "menu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat_name</th>\n",
+       "      <th>cat_img_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Whole Bean</td>\n",
+       "      <td>./menu/Whole Bean.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Iced Teas</td>\n",
+       "      <td>./menu/Iced Teas.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Snacks &amp; Sweets</td>\n",
+       "      <td>./menu/Snacks &amp; Sweets.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bakery</td>\n",
+       "      <td>./menu/Bakery.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Oatmeal &amp; Yogurt</td>\n",
+       "      <td>./menu/Oatmeal &amp; Yogurt.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cold Coffees</td>\n",
+       "      <td>./menu/Cold Coffees.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Hot Breakfast</td>\n",
+       "      <td>./menu/Hot Breakfast.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Hot Teas</td>\n",
+       "      <td>./menu/Hot Teas.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Mugs</td>\n",
+       "      <td>./menu/Mugs.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>./menu/Other.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>VIA® Instant</td>\n",
+       "      <td>./menu/VIA® Instant.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cold Drinks</td>\n",
+       "      <td>./menu/Cold Drinks.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Hot Drinks</td>\n",
+       "      <td>./menu/Hot Drinks.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Tumblers</td>\n",
+       "      <td>./menu/Tumblers.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Oleato™</td>\n",
+       "      <td>./menu/Oleato™.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Hot Coffees</td>\n",
+       "      <td>./menu/Hot Coffees.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Frappuccino® Blended Beverages</td>\n",
+       "      <td>./menu/Frappuccino® Blended Beverages.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Lunch</td>\n",
+       "      <td>./menu/Lunch.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Cold Cups</td>\n",
+       "      <td>./menu/Cold Cups.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          cat_name                               cat_img_path\n",
+       "0                       Whole Bean                      ./menu/Whole Bean.jpg\n",
+       "1                        Iced Teas                       ./menu/Iced Teas.jpg\n",
+       "2                  Snacks & Sweets                 ./menu/Snacks & Sweets.jpg\n",
+       "3                           Bakery                          ./menu/Bakery.jpg\n",
+       "4                 Oatmeal & Yogurt                ./menu/Oatmeal & Yogurt.jpg\n",
+       "5                     Cold Coffees                    ./menu/Cold Coffees.jpg\n",
+       "6                    Hot Breakfast                   ./menu/Hot Breakfast.jpg\n",
+       "7                         Hot Teas                        ./menu/Hot Teas.jpg\n",
+       "8                             Mugs                            ./menu/Mugs.jpg\n",
+       "9                            Other                           ./menu/Other.jpg\n",
+       "10                    VIA® Instant                    ./menu/VIA® Instant.jpg\n",
+       "11                     Cold Drinks                     ./menu/Cold Drinks.jpg\n",
+       "12                      Hot Drinks                      ./menu/Hot Drinks.jpg\n",
+       "13                        Tumblers                        ./menu/Tumblers.jpg\n",
+       "14                         Oleato™                         ./menu/Oleato™.jpg\n",
+       "15                     Hot Coffees                     ./menu/Hot Coffees.jpg\n",
+       "16  Frappuccino® Blended Beverages  ./menu/Frappuccino® Blended Beverages.jpg\n",
+       "17                           Lunch                           ./menu/Lunch.jpg\n",
+       "18                       Cold Cups                       ./menu/Cold Cups.jpg"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cold_coffees = convertToArrayObjects('cold_coffees', './drinks/cold_coffees/')\n",
-    "cold_drinks = convertToArrayObjects('cold_drinks', './drinks/cold_drinks/')\n",
-    "frappucino = convertToArrayObjects('frappucino', './drinks/frappucino/')\n",
-    "hot_drinks = convertToArrayObjects('hot_drinks', './drinks/hot_drinks/')\n",
-    "hot_teas = convertToArrayObjects('hot_teas', './drinks/hot_teas/')\n",
-    "iced_teas = convertToArrayObjects('iced_teas', './drinks/iced_teas/')"
+    "data = pd.DataFrame(menu)\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cold_coffees = convertToArrayObjects('cold_coffees', './drinks/cold_coffees/')"
+    "def subCatData (sub_category, folder_path):\n",
+    "    item_objects = []\n",
+    "\n",
+    "    # Iterate over each file in the folder\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        if filename.endswith(\".jpg\"):  # Consider only JPG files, you can modify the condition as per your requirement\n",
+    "            item_name = os.path.splitext(filename)[0]  # Get the item name without the extension\n",
+    "            item_path = os.path.join(folder_path, filename)  # Get the full path to the image\n",
+    "            \n",
+    "            # Create the object and append it to the list\n",
+    "            item_objects.append({\"sub_cat_name\": item_name, \"img_path\": item_path})\n",
+    "\n",
+    "    return item_objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cold_coffees = subCatData('cold_coffees', './drinks/cold_coffees/')\n",
+    "cold_drinks = subCatData('cold_drinks', './drinks/cold_drinks/')\n",
+    "frappucino = subCatData('frappucino', './drinks/frappucino/')\n",
+    "hot_drinks = subCatData('hot_drinks', './drinks/hot_drinks/')\n",
+    "hot_teas = subCatData('hot_teas', './drinks/hot_teas/')\n",
+    "iced_teas = subCatData('iced_teas', './drinks/iced_teas/')\n",
+    "cold_coffees = subCatData('cold_coffees', './drinks/cold_coffees/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sub_cat_name': 'Iced Chocolate Almondmilk Shaken Espresso',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Chocolate Almondmilk Shaken Espresso.jpg'},\n",
+       " {'sub_cat_name': 'White Chocolate Macadamia Cream Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/White Chocolate Macadamia Cream Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Iced Caramel Macchiato',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Caramel Macchiato.jpg'},\n",
+       " {'sub_cat_name': 'Iced White Chocolate Mocha',\n",
+       "  'img_path': './drinks/cold_coffees/Iced White Chocolate Mocha.jpg'},\n",
+       " {'sub_cat_name': 'Iced Toasted Vanilla Oatmilk Shaken Espresso',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Toasted Vanilla Oatmilk Shaken Espresso.jpg'},\n",
+       " {'sub_cat_name': 'Starbucks® Cold Brew Coffee',\n",
+       "  'img_path': './drinks/cold_coffees/Starbucks® Cold Brew Coffee.jpg'},\n",
+       " {'sub_cat_name': 'Iced Honey Almondmilk Flat White',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Honey Almondmilk Flat White.jpg'},\n",
+       " {'sub_cat_name': 'Iced Espresso',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Espresso.jpg'},\n",
+       " {'sub_cat_name': 'Iced Caffè Mocha',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Caffè Mocha.jpg'},\n",
+       " {'sub_cat_name': 'Iced Cinnamon Dolce Latte',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Cinnamon Dolce Latte.jpg'},\n",
+       " {'sub_cat_name': 'Iced Shaken Espresso',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Shaken Espresso.jpg'},\n",
+       " {'sub_cat_name': 'Iced Caffè Latte',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Caffè Latte.jpg'},\n",
+       " {'sub_cat_name': 'Starbucks Reserve® Iced Dark Chocolate Mocha',\n",
+       "  'img_path': './drinks/cold_coffees/Starbucks Reserve® Iced Dark Chocolate Mocha.jpg'},\n",
+       " {'sub_cat_name': 'Oleato™ Iced Shaken Espresso with Oatmilk and Toffeenut',\n",
+       "  'img_path': './drinks/cold_coffees/Oleato™ Iced Shaken Espresso with Oatmilk and Toffeenut.jpg'},\n",
+       " {'sub_cat_name': 'Iced Coffee',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Coffee.jpg'},\n",
+       " {'sub_cat_name': 'Starbucks Reserve® Iced Hazelnut Bianco Latte',\n",
+       "  'img_path': './drinks/cold_coffees/Starbucks Reserve® Iced Hazelnut Bianco Latte.jpg'},\n",
+       " {'sub_cat_name': 'Vanilla Sweet Cream Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Vanilla Sweet Cream Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Iced Coffee with Milk',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Coffee with Milk.jpg'},\n",
+       " {'sub_cat_name': 'Cinnamon Caramel Cream Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Cinnamon Caramel Cream Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Nitro Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Nitro Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Salted Caramel Cream Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Salted Caramel Cream Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Iced Flat White',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Flat White.jpg'},\n",
+       " {'sub_cat_name': 'Cinnamon Caramel Cream Nitro Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Cinnamon Caramel Cream Nitro Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Iced Caffè Americano',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Caffè Americano.jpg'},\n",
+       " {'sub_cat_name': 'Chocolate Cream Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Chocolate Cream Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Starbucks Reserve® Iced Latte',\n",
+       "  'img_path': './drinks/cold_coffees/Starbucks Reserve® Iced Latte.jpg'},\n",
+       " {'sub_cat_name': 'Iced Starbucks® Blonde Vanilla Latte',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Starbucks® Blonde Vanilla Latte.jpg'},\n",
+       " {'sub_cat_name': 'Starbucks® Cold Brew Coffee with Milk',\n",
+       "  'img_path': './drinks/cold_coffees/Starbucks® Cold Brew Coffee with Milk.jpg'},\n",
+       " {'sub_cat_name': 'Iced Brown Sugar Oatmilk Shaken Espresso',\n",
+       "  'img_path': './drinks/cold_coffees/Iced Brown Sugar Oatmilk Shaken Espresso.jpg'},\n",
+       " {'sub_cat_name': 'Vanilla Sweet Cream Nitro Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Vanilla Sweet Cream Nitro Cold Brew.jpg'},\n",
+       " {'sub_cat_name': 'Oleato Golden Foam™ Cold Brew',\n",
+       "  'img_path': './drinks/cold_coffees/Oleato Golden Foam™ Cold Brew.jpg'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cold_coffees"
    ]
   },
   {
@@ -971,7 +1238,7 @@
     }
    ],
    "source": [
-    "data"
+    "da"
    ]
   },
   {
